# network-initializer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: fmt.yml  test.yml
initialization_files/: double_chain.toml  sc_bug.toml  test.toml  test_2.toml
initialization_files/client_video_surreal/db/: IDENTITY
initialization_files/test_files/bidirectionality/: client_err.toml  drone_err.toml  server_err.toml
initialization_files/test_files/node_connection/: err_node_connection.toml
initialization_files/test_files/unique_ids/: duplicate_ids.toml
server_database/: db  snap.000000000000013D
src/: errors.rs  lib.rs  main.rs  network_init.rs
src/network_init/: getters.rs  mod.rs  net_utils.rs
src/types/: channel.rs  mod.rs  nodes.rs  parsed_nodes.rs
src/utils/: errors.rs  parser.rs
tests/parser/: mod.rs  test_bidirectionality.rs  test_node_connection.rs  test_unique_ids.rs
