[package]
name = "network-initializer"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2"
crossbeam = "0.8.4"
tokio = { version = "1.10.0", features = ["full"] }
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "debug",
] }

ctrlc = { version = "3.1.0", optional = true }

client-video = { git = "ssh://git@github.com/Rusteze-AP/client-video.git", branch = "main" }
client-audio = { git = "ssh://git@github.com/Rusteze-AP/client-audio.git", branch = "main" }
server = { git = "ssh://git@github.com/Rusteze-AP/server.git", branch = "main" }
packet_forge = { git = "ssh://git@github.com/Rusteze-AP/packet-forge.git", branch = "main" }

rusteze_drone = { git = "ssh://git@github.com/Rusteze-AP/drone.git", branch = "main" }

rustbusters-drone = { git = "ssh://git@github.com/Rustbusters/drone.git" }
dr_ones = { git = "ssh://git@github.com/Dr-Ones/drone" }
wg_2024-rust = { git = "ssh://git@github.com/LuigiMiazzo17/unitn-advancedProgramming-WGL_2024-drone.git" }
rust_do_it = { git = "ssh://git@github.com/RustDoIt/Drone.git" }
lockheedrustin-drone = { git = "ssh://git@github.com/Lockheed-Rustin/drone.git" }
ap2024_unitn_cppenjoyers_drone = { git = "ssh://git@github.com/Cpp-enjoyers/drone.git" }
skylink = { git = "ssh://git@github.com/Suge42/Skylink_drone.git" }
rusty_drones = { git = "ssh://git@github.com/rusty-drone-2024/rusty-drone", branch = "main" }
null-pointer-drone = { git = "ssh://git@github.com/The-Null-Pointer-Patrol/null-pointer-drone.git" }
rust-roveri = { git = "ssh://git@github.com/RustRoveri/rust-roveri.git" }

[features]
use_ctrlc = ["ctrlc"]